tests/baselines/reference/propertyOverridesMethod.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesMethod.ts(5,5): error TS2424: Class 'A' defines instance member function 'm', but extended class 'B' defines it as instance member property.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesMethod.ts (1 errors) ====
    class A {
        m() { }
    }
    class B extends A {
        m = () => 1
        ~
!!! error TS2424: Class 'A' defines instance member function 'm', but extended class 'B' defines it as instance member property.
    }
    